# rainbow-cm

./: .gitignore  .travis.yml  AUTHORS  Makefile.am  README  autogen.sh  configure.ac
data/: Makefile.am  rainbow-cm-startup.desktop.in  rainbow-cm.desktop.in  rainbow-cm.xpm
po/: LINGUAS  POTFILES.in  ru.po
src/: Makefile.am  about.c  about.h  attr_list.c  attr_list.h  history-menu.c.h  history.c  history.h  i18n.h  main-menu.c.h  main.c  main.h  parcellite.h  preferences.c  preferences.h  rainbow-cm.h  utils.c  utils.h
